Fixed broken css

--- a/scss/tech.scss
+++ b/scss/tech.scss
@@ -12,13 +12,6 @@
   }
 }
 
-  >:first-child {
-    border-right: solid 2px $green;
-    grid-row: 1/3;
-    height: 100%;
-    justify-content: center;
-  }
-}
 .tech-img {
   height: $tech-logo-size;
   width: $tech-logo-size;
@@ -60,7 +53,7 @@
     padding: 30px;
     justify-items: center;
 
-    >:first-child {
+    .tech:first-child {
       grid-row: 1;
       align-self: center;
       border-top: none;
